change header file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>
-        hi this is my first frontend 
+        hi this is my first frontend page
     </h1>
     
     <div class="container">
